kubernetes/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  hostnames: ["${SUBDOMAIN}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops-analogpuddle
spec:
  hostnames: ["${SUBDOMAIN}.analogpuddle.com"]
  parentRefs:
    - name: envoy-internal-ap
      namespace: network
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
